# langchain-academy

./: pyproject.toml
src/langchain_academy/: __init__.py
