[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Balpreet Pankaj", email = "balpreet.pankaj@gmail.com" }
]
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-sdk>=0.1.48",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langsmith>=0.2.6",
    "langchain-community>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.2.14",
    "notebook>=7.3.2",
    "tavily-python>=0.5.0",
    "wikipedia>=1.4.0",
    "trustcall>=0.0.26",
    "langgraph-cli>=0.1.65",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_academy"]
